feat: add monorepo-preview-release

--- a/actions/setup-pnpm-bun/action.yml
+++ b/actions/setup-pnpm-bun/action.yml
@@ -1,4 +1,4 @@
-name: Setup pnpm + bun
+name: setup-pnpm-bun
 
 description: Prepare package manager, cache dependencies, and install dependencies
 
