--- a/actions/monorepo-preview-release/Dockerfile
+++ b/actions/monorepo-preview-release/Dockerfile
@@ -1,5 +1,5 @@
 FROM oven/bun:1 AS base
-WORKDIR /usr/src/app
+WORKDIR /app
 
 FROM base AS install
 RUN mkdir -p /temp/install
@@ -8,9 +8,8 @@ RUN cd /temp/install && bun i
 
 FROM base AS release
 COPY --from=install /temp/install/node_modules node_modules
-COPY package.json .
-COPY src src
-RUN ls -laR /usr/src/app  # Verifica la estructura de archivos
+COPY . .
+RUN ls -laR /app
 ENV NODE_ENV=production
 USER bun
-ENTRYPOINT ["bun", "run", "src/bin.ts"]
+ENTRYPOINT ["bun", "run", "/app/src/bin.ts"]
