--- a/actions/monorepo-preview-release/action.yml
+++ b/actions/monorepo-preview-release/action.yml
@@ -2,30 +2,46 @@ name: monorepo-preview-release
 
 description: Action to release packages in a monorepo with a PR related tag
 
+inputs:
+  auth_token:
+    description: Token for authentication with npm registry
+    required: true
+
 # runs:
 #   using: docker
 #   image: Dockerfile
 
-inputs:
-  bun_version:
-    description: Version of Bun to use
-    required: false
-    default: 1.2.4
+# inputs:
+#   bun_version:
+#     description: Version of Bun to use
+#     required: false
+#     default: 1.2.4
 
-  pnpm_version:
-    description: Version of pnpm to use
-    required: false
-    default: 10.6.4
+#   pnpm_version:
+#     description: Version of pnpm to use
+#     required: false
+#     default: 10.6.4
+
+# runs:
+#   using: composite
+
+#   steps:
+#     - uses: docker/build-push-action@v5
+#       with:
+#         context: .
+#         push: false
+#         load: true
+#         build-args: |
+#           BUN_VERSION=${{ inputs.bun_version }}
+#           PNPM_VERSION=${{ inputs.pnpm_version }}
 
 runs:
   using: composite
 
   steps:
-    - uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: false
-        load: true
-        build-args: |
-          BUN_VERSION=${{ inputs.bun_version }}
-          PNPM_VERSION=${{ inputs.pnpm_version }}
+    - name: 🚀 Preview release
+      run: bun ${{ github.action_path }}/src/bin.ts
+      shell: bash
+      env:
+        PR_NUMBER: ${{ github.event.pull_request.number }}
+        AUTH_TOKEN: ${{ inputs.auth_token }}
