--- a/actions/monorepo-preview-release/action.yml
+++ b/actions/monorepo-preview-release/action.yml
@@ -5,7 +5,7 @@ description: Action to release packages in a monorepo with a PR related tag
 inputs:
   auth_token:
     description: Token for authentication with npm registry
-    required: true
+    required: false
 
 # runs:
 #   using: docker
