--- a/actions/monorepo-preview-release/action.yml
+++ b/actions/monorepo-preview-release/action.yml
@@ -20,7 +20,7 @@ runs:
 
   steps:
     - name: 🚀 Preview release
-      run: bun ${{ github.action_path }}/src/bin.ts
+      run: bun ${{ github.action_path }}/src/index.ts
       shell: bash
       # env:
       #   PR_NUMBER: ${{ inputs.pr_number }}
