--- a/actions/setup-pnpm-bun/action.yml
+++ b/actions/setup-pnpm-bun/action.yml
@@ -1,35 +1,13 @@
 name: setup-pnpm-bun
 
-description: Prepare package manager, cache dependencies, and install dependencies
+description: Prepare PNPM and Bun, cache dependencies, and install dependencies
 
 runs:
   using: composite
 
   steps:
-    - name: 📦 Setup pnpm
-      uses: pnpm/action-setup@v4
-      with:
-        run_install: false
-
-    - name: 🫙 Export pnpm store path
-      id: pnpm-config
-      shell: bash
-      run: |
-        echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-
-    - name: 🔑 Export cache rotation key
-      id: cache-rotation
-      shell: bash
-      run: |
-        echo "ROTATION_KEY=$(/bin/date -u "+%Y%m")" >> $GITHUB_OUTPUT
-
-    - name: 🔁 Cache dependencies
-      uses: actions/cache@v4
-      with:
-        path: ${{ steps.pnpm-config.outputs.STORE_PATH }}
-        key: ${{ runner.os }}-pnpm-store-cache-${{ steps.cache-rotation.outputs.ROTATION_KEY }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-          ${{ runner.os }}-pnpm-store-cache-${{ steps.cache-rotation.outputs.ROTATION_KEY }}-
+    - name: 📦 Setup PNPM
+      uses: ../setup-pnpm
 
     - name: 🔍 .bun-version
       shell: bash
@@ -43,7 +21,3 @@ runs:
       uses: oven-sh/setup-bun@v2
       with:
         bun-version-file: ".bun-version"
-
-    - name: 📥 Install dependencies
-      run: pnpm install --frozen-lockfile --prefer-offline
-      shell: bash # required for composite actions
