--- a/actions/setup-pnpm-bun/action.yml
+++ b/actions/setup-pnpm-bun/action.yml
@@ -7,7 +7,7 @@ runs:
 
   steps:
     - name: 📦 Setup PNPM
-      uses: ../setup-pnpm
+      uses: ./actions/setup-pnpm
 
     - name: 🔍 .bun-version
       shell: bash
