--- a/actions/setup-pnpm/action.yml
+++ b/actions/setup-pnpm/action.yml
@@ -1,6 +1,6 @@
-name: setup-pnpm-bun
+name: setup-pnpm
 
-description: Prepare PNPM and Bun, cache dependencies, and install dependencies
+description: Prepare PNPM, cache dependencies, and install dependencies
 
 runs:
   using: composite
@@ -34,16 +34,3 @@ runs:
     - name: 📥 Install dependencies
       run: pnpm install --frozen-lockfile --prefer-offline
       shell: bash # required for composite actions
-
-    - name: 🔍 .bun-version
-      shell: bash
-      run: |
-        if [ ! -f ".bun-version" ]; then
-          echo "❌ Error: .bun-version file not found. This file is required to configure the correct version of Bun."
-          exit 1
-        fi
-
-    - name: 🥟 Setup Bun
-      uses: oven-sh/setup-bun@v2
-      with:
-        bun-version-file: ".bun-version"
