--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "typecheck": "turbo typecheck",
     "prepare": "husky"
   },
   "devDependencies": {
     "@vlandoss/biome-config": "^0.0.3",
-    "@vlandoss/run-run": "^0.0.6",
-    "husky": "^9.1.7",
-    "turbo": "^2.5.5"
+    "@vlandoss/run-run": "^0.0.8",
+    "husky": "^9.1.7"
   },
   "packageManager": "pnpm@10.6.4"
 }
