--- a/actions/railway-redeploy/action.yml
+++ b/actions/railway-redeploy/action.yml
@@ -7,7 +7,7 @@ inputs:
     description: ID of the Railway service to redeploy
     required: true
 
-  auth_token:
+  railway_token:
     description: API token for authentication with Railway
     required: true
 
@@ -23,7 +23,3 @@ runs:
     - name: 🚀 Redeploy to Railway
       run: bun ${{ github.action_path }}/src/index.ts
       shell: bash
-      env:
-        SERVICE_ID: ${{ inputs.service_id }}
-        AUTH_TOKEN: ${{ inputs.auth_token }}
-        RAILWAY_API: ${{ inputs.railway_api }}
