--- a/actions/railway-redeploy/action.yml
+++ b/actions/railway-redeploy/action.yml
@@ -23,3 +23,7 @@ runs:
     - name: 🚀 Redeploy to Railway
       run: bun ${{ github.action_path }}/src/index.ts
       shell: bash
+      env:
+        SERVICE_ID: ${{ inputs.service_id }}
+        RAILWAY_TOKEN: ${{ inputs.railway_token }}
+        RAILWAY_API: ${{ inputs.railway_api }}
