--- a/actions/monorepo-preview-release/action.yml
+++ b/actions/monorepo-preview-release/action.yml
@@ -14,3 +14,5 @@ runs:
     - name: 🚀 Preview release
       run: bun ${{ github.action_path }}/src/index.ts
       shell: bash
+      with:
+        github_token: ${{ inputs.github_token }}
