--- a/actions/monorepo-preview-release/action.yml
+++ b/actions/monorepo-preview-release/action.yml
@@ -14,5 +14,5 @@ runs:
     - name: 🚀 Preview release
       run: bun ${{ github.action_path }}/src/index.ts
       shell: bash
-      with:
-        github_token: ${{ inputs.github_token }}
+      env:
+        GITHUB_TOKEN: ${{ inputs.github_token }}
