--- a/actions/setup-pnpm-bun/action.yml
+++ b/actions/setup-pnpm-bun/action.yml
@@ -13,7 +13,9 @@ runs:
 
     # OIDC requires npm >=11.5.1.
     - name: Re-install npm
-      run: npm install -g npm@11
+      shell: bash
+      run: |
+        npm install -g npm@11
 
     - name: 🫙 Export pnpm store path
       id: pnpm-config
