--- a/actions/monorepo-preview-release/action.yml
+++ b/actions/monorepo-preview-release/action.yml
@@ -3,13 +3,13 @@ name: monorepo-preview-release
 description: Action to release packages in a monorepo with a PR related tag
 
 inputs:
-  auth_token:
-    description: Token for authentication with npm registry
-    required: false
-
   github_token:
     description: Token for authentication with GitHub API
     required: true
+
+  npm_token:
+    description: Token for authentication with npm registry
+    required: false
 
 runs:
   using: composite
@@ -19,5 +19,5 @@ runs:
       run: bun ${{ github.action_path }}/src/index.ts
       shell: bash
       env:
-        AUTH_TOKEN: ${{ inputs.auth_token }}
         GITHUB_TOKEN: ${{ inputs.github_token }}
+        NPM_TOKEN: ${{ inputs.npm_token }}
