--- a/actions/setup-bun/action.yml
+++ b/actions/setup-bun/action.yml
@@ -18,3 +18,8 @@ runs:
       uses: oven-sh/setup-bun@v2
       with:
         bun-version-file: ".bun-version"
+
+    - name: 🔍 Log versions
+      shell: bash
+      run: |
+        echo "bun version: $(bun -v)"
