--- a/actions/setup-pnpm/action.yml
+++ b/actions/setup-pnpm/action.yml
@@ -11,6 +11,10 @@ runs:
       with:
         run_install: false
 
+    - name: 📦 Update npm
+      shell: bash
+      run: npm install -g npm@11
+
     - name: 🫙 Export pnpm store path
       id: pnpm-config
       shell: bash
