--- a/actions/setup-pnpm-bun/action.yml
+++ b/actions/setup-pnpm-bun/action.yml
@@ -13,7 +13,7 @@ runs:
 
     - name: 📦 Update npm
       shell: bash
-      run: npm install -g npm@11
+      run: sudo npm install -g npm@11
 
     - name: 🫙 Export pnpm store path
       id: pnpm-config
